@@ -11,6 +11,8 @@ xine-lib (1.1.4)
     Reinhard Nissl. [bug #1551911]
   * Allow building with Sun CC by fixing the lprintf variadic macro; patch by
     Taso N. Devetzis. [bug #1614406]
+  * Fix disposing of image buffers in video_out_xv when SHM get disabled by
+    exhaustion of memory; patch by Matthias Drochner. [bug #1620339]
 
 xine-lib (1.1.3)
   * Security fixes:
